prevent pinch zoom on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,10 @@ h1, h2, h3, h4, h5 {
     text-align: center;
 }
 
+html, body {
+    touch-action: none
+}
+
 @media screen and (max-width: 450px) {
     .intro p {
         font-size: 68px;
